// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Gabapentin Integration Test parses gabapentin 1`] = `
{
  "components": [
    {
      "atoms": "C",
      "attachments": {
        "4": [
          {
            "atoms": [
              "C",
              "C",
              "O",
            ],
            "attachments": {
              "2": [
                {
                  "atoms": [
                    "O",
                  ],
                  "attachments": {},
                  "bonds": [
                    "=",
                  ],
                  "type": "linear",
                },
              ],
            },
            "bonds": [
              null,
              null,
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "N",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Gabapentin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Ring({ atoms: 'C', size: 6, branchDepths: [0, 0, 0, 0, 1, 1] });
export const v2 = Linear(['C', 'C', 'O']);
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(v3, 2);
export const v5 = v1.attach(v4, 4);
export const v6 = Linear(['C', 'N']);
export const v7 = Molecule([v5, v6]);"
`;

exports[`Pregabalin Integration Test parses pregabalin 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "N",
  ],
  "attachments": {
    "2": [
      {
        "atoms": [
          "C",
        ],
        "attachments": {},
        "bonds": [
          null,
        ],
        "type": "linear",
      },
    ],
    "4": [
      {
        "atoms": [
          "C",
          "C",
          "O",
        ],
        "attachments": {
          "2": [
            {
              "atoms": [
                "O",
              ],
              "attachments": {},
              "bonds": [
                "=",
              ],
              "type": "linear",
            },
          ],
        },
        "bonds": [
          null,
          null,
          null,
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Pregabalin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'N']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(v2, 2);
export const v4 = Linear(['C', 'C', 'O']);
export const v5 = Linear(['O'], ['=']);
export const v6 = v4.attach(v5, 2);
export const v7 = v3.attach(v6, 4);"
`;

exports[`Amitriptyline Integration Test parses amitriptyline 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "N",
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            "=",
            null,
            null,
            null,
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 11,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 1,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 5,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Amitriptyline Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'N', 'C', 'C', 'C']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(v2, 2);
export const v4 = Ring({ atoms: 'C', size: 11, bonds: [null, '=', null, null, null, '=', null, '=', null, '=', null] });
export const v5 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 1, bonds: ['=', null, '=', null, '=', null] });
export const v6 = Ring({ atoms: 'C', size: 6, ringNumber: 3, offset: 5, bonds: ['=', null, '=', null, '=', null] });
export const v7 = FusedRing([v4, v5, v6], { leadingBond: '=' });
export const v8 = Molecule([v3, v7]);"
`;

exports[`Duloxetine Integration Test parses duloxetine 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "N",
        "C",
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "5": [
          {
            "atoms": "C",
            "attachments": {},
            "bonds": [
              "=",
              null,
              "=",
              null,
              null,
            ],
            "offset": 0,
            "ringNumber": 1,
            "size": 5,
            "substitutions": {
              "5": "S",
            },
            "type": "ring",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 4,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Duloxetine Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'N', 'C', 'C', 'C', 'O']);
export const v2 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, '=', null, null] });
export const v3 = v2.substitute(5, 'S');
export const v4 = v1.attach(v3, 5);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: ['=', null, '=', null, '=', null, '=', null, '=', null] });
export const v6 = Ring({ atoms: 'C', size: 6, ringNumber: 3, offset: 4, bonds: ['=', null, '=', null, '=', null] });
export const v7 = v5.fuse(v6, 4);
export const v8 = Molecule([v4, v7]);"
`;

exports[`Carbamazepine Integration Test parses carbamazepine 1`] = `
{
  "components": [
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            "=",
            null,
            "=",
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 7,
          "substitutions": {
            "7": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "N",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Carbamazepine Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 0, 0, 1] });
export const v2 = Ring({ atoms: 'C', size: 7, ringNumber: 2, offset: 3, bonds: [null, null, '=', null, '=', null, null] });
export const v3 = v2.substitute(7, 'N');
export const v4 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v5 = FusedRing([v1, v3, v4]);
export const v6 = Linear(['C', 'N']);
export const v7 = Linear(['O'], ['=']);
export const v8 = v6.attach(v7, 1);
export const v9 = Molecule([v5, v8]);"
`;

exports[`Valproic Acid Integration Test parses valproic acid 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "4": [
      {
        "atoms": [
          "C",
          "C",
          "C",
        ],
        "attachments": {},
        "bonds": [
          null,
          null,
          null,
        ],
        "type": "linear",
      },
    ],
    "5": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Valproic Acid Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'O']);
export const v2 = Linear(['C', 'C', 'C']);
export const v3 = v1.attach(v2, 4);
export const v4 = Linear(['O'], ['=']);
export const v5 = v3.attach(v4, 5);"
`;
